--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,11 @@
     <string name="rightParen">)</string>
     <string name="c">C</string>
 
+    <string name="sin">sin</string>
+    <string name="cos">cos</string>
+    <string name="tan">tan</string>
+    <string name="arcsin">sin⁻¹</string>
+    <string name="arccos">cos⁻¹</string>
+    <string name="arctan">tan⁻¹</string>
+
 </resources>
