Changed the multiplication symbol and fixed a couple of things

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="one">1</string>
     <string name="two">2</string>
     <string name="three">3</string>
-    <string name="multiply">×</string>
+    <string name="multiply">∗</string>
     <string name="decimal">.</string>
     <string name="zero">0</string>
     <string name="power">^</string>
